# Odometr

./: CMakeLists.txt  CMakeSettings.json  intrinsics.yaml
src/: draw.h  main.cpp  reader.h  tracker.h
